--- a/sec4/4-1.html
+++ b/sec4/4-1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Monster Slayer</title>
-    <script src="vue.js"></script>
+    <script src="javascript/vue.js"></script>
     <link rel="stylesheet" href="css/foundation.min.css">
     <link rel="stylesheet" href="css/app.css">
 </head>
@@ -33,10 +33,10 @@
     </section>
     <section class="row controls">
         <div class="small-12 columns">
-            <button id="attack">ATTACK</button>
-            <button id="special-attack">SPECIAL ATTACK</button>
-            <button id="heal">HEAL</button>
-            <button id="give-up">GIVE UP</button>
+            <button @click="attack" id="attack">ATTACK</button>
+            <button @click="specialAttack" id="special-attack">SPECIAL ATTACK</button>
+            <button @click="heal" id="heal">HEAL</button>
+            <button @click="giveUp" id="give-up">GIVE UP</button>
         </div>
     </section>
     <section class="row log">
@@ -86,6 +86,37 @@
                     width = 100;
                     return width;
                 }
+            }
+        },
+        methods: {
+            attack: function() {
+                min_damage = 5;
+                max_damage = 10;
+                this.calc_damage(min_damage, max_damage);
+            },
+            specialAttack: function() {
+                min_damage = 5;
+                max_damage = 20;
+                this.calc_damage(min_damage, max_damage);
+            },
+            calc_damage: function(min, max) {
+                for(key in this.width) {
+                    damage = Math.round(Math.random() * (max - min)) + min;
+                    this.width[key] -= damage;
+                }
+            },
+            heal: function() {
+                min_damage = 5;
+                max_damage = 10;
+                damage = Math.round(Math.random() * (max_damage - min_damage)) + min_damage;
+                this.width.player -= damage;
+                min_heal = 7;
+                max_heal = 12;
+                heal = Math.round(Math.random() * (max_heal - min_heal)) + min_heal;
+                this.width.player += heal;
+            },
+            giveUp: function() {
+
             }
         }
     })
